samples/_failures_safe/1761652662_2e42ee_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_602c3bac.c: In function ‘main’:
./samples/SAFE/__tmp_602c3bac.c:152:17: error: expected expression at end of input
  152 |                 } else
      |                 ^
./samples/SAFE/__tmp_602c3bac.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_602c3bac.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_602c3bac.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_602c3bac.c:152:17: error: expected declaration or statement at end of input
